--- a/final/css/main.css
+++ b/final/css/main.css
@@ -1,58 +1,195 @@
+@font-face {
+  font-family: 'dosis';
+  src: url('../fonts/dosis-bold-webfont.woff2') format('woff2'),
+       url('../fonts/dosis-bold-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'dosis';
+  src: url('../fonts/dosis-extrabold-webfont.woff2') format('woff2'),
+       url('../fonts/dosis-extrabold-webfont.woff') format('woff');
+  font-weight: 800;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'dosis';
+  src: url('../fonts/dosis-semibold-webfont.woff2') format('woff2'),
+       url('../fonts/dosis-semibold-webfont.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+
+}
+
 html {
-    font-size: 100%;
-    box-sizing: border-box;
-  
+  font-size: 100%;
+  box-sizing: border-box;
 }
 
 body {
-    background: rgb(78,230,203);
-    background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%);
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
+  background: #4ee6cb;
+  background: linear-gradient(152deg, #4ee6cb 0%, #1cb4df 100%);
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  font-family: 'dosis', Arial, Helvetica, sans-serif;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
-    margin: 1rem auto;
-    position: absolute;
-    left: 5rem;
-    z-index: 50;
+  margin: 1rem auto;
+  left: 5rem;
+  z-index: 50;
 }
 
 header {
-  height: 80px 
+  height: 80px; 
 }
 
-#cuisine-section {
-    /* margin: 0 auto; */
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-column-gap: .2rem;
-    grid-row-gap: 10px;
-    width: 208px;
-    height: 318px;
+#like-dislike-section {
+  border-radius: 1.5rem;
+  position: relative;
+  height: 3rem;
+  width: 17rem;
+  overflow: hidden;
+  margin: .75rem 0;
 }
 
-#pickForMe-btn {
-    margin-top: 1.5rem;
+
+#slide-bg {
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -10;
+  opacity: .6;
+}
+
+.btn {
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  transition: background 600ms ease, color 600ms ease;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 1px;
+  color: #1a1a1a;
+  text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
+}
+input[type="radio"].toggle {
+  display: none;
+}
+input[type="radio"].toggle + label {
+  cursor: pointer;
+  min-width: 50%;
+  font-size: 1.5rem;
+  padding: .55rem 0;
+}
+input[type="radio"].toggle + label:hover {
+  background: none;
+  color: #1cb4df;
+}
+input[type="radio"].toggle + label:after {
+  background: #fff;
+  content: "";
+  height: 100%;
+  position: absolute;
+  top: 0;
+  transition: left 200ms cubic-bezier(0.77, 0, 0.175, 1);
+  width: 100%;
+  z-index: -1;
+  border-radius: 1.5rem;
+}
+input[type="radio"].toggle.toggle-left + label {
+  border-right: 0;
+}
+input[type="radio"].toggle.toggle-left + label:after {
+  left: 100%;
+}
+input[type="radio"].toggle.toggle-right + label {
+  margin-left: -5px;
+}
+input[type="radio"].toggle.toggle-right + label:after {
+  left: -100%;
+}
+input[type="radio"].toggle:checked + label {
+  cursor: default;
+  transition: color 200ms;
+}
+input[type="radio"].toggle:checked + label:after {
+  left: 0;
+}
+
+#cuisine-select {
+  display: grid;
+  grid-template-columns: repeat(2, 7rem);
+  grid-template-rows: repeat(3, 7rem);
+  grid-column-gap: .5rem;
+  grid-row-gap: .5rem;
+  justify-items: center;
+  align-items: center;
+}
+
+.cuisine-icon {
+  position: relative;
+  display: inline-block;
+  transition: transform 200ms ease-in-out;
+}
+
+.food-img {
+  box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,.16);
+  border-radius: 1rem;
+  transition: box-shadow 200ms ease-in-out;
+}
+
+.food-label {
+  position: absolute;
+  bottom: -.5rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: .9rem;
+  width: 100%;
+}
+
+[type=checkbox] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+[type=checkbox] + .cuisine-icon {
+  cursor: pointer;
+}
+
+[type=checkbox]:checked + .cuisine-icon {
+  transform: scale(1.1);
+}
+
+[type=checkbox]:checked + .cuisine-icon > .food-img {
+  box-shadow: 0 0.1875rem 0.5rem rgba(0,0,0,.6);
 }
 
 #shuffling-animation-div {
   background: rgb(78,230,203);
   background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%);
-    height: 100vh;
-    width: 100vw;
-    z-index: 30;
-    position: absolute;
-    visibility: collapse;
+  height: 100vh;
+  width: 100vw;
+  z-index: 30;
+  position: absolute;
+  visibility: collapse;
 }
 
 #shuffling-animation-container {
@@ -63,170 +200,171 @@ header {
 }
 
 .hand {
-    position: relative;
-    height: 100px;
+  position: relative;
+  height: 100px;
+}
+
+.card {
+  height: 95px;
+  width: 95px;
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,.16);
+  position: absolute;
+  top: 0;
+  transition: transform 0.2s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
+
+
+/** Deals with card animation */
+/* span {
+  background-color: #8badc8;
+  display: none;
+  margin: 0 auto;
+  width: 88px;
+  height: 88px;
+  border-radius: 25px;
+} */
+
+.card-1 {
+  z-index: 3;
+  margin-left: 20px;
+  animation-duration: 6s;
+  animation-name: card-1;
+  animation-iteration-count: infinite;
+}
+
+.card-2 {
+  z-index: 2;
+  margin-left: 10px;
+  animation-duration: 6s;
+  animation-name: card-2;
+  animation-iteration-count: infinite;
+}
+
+.card-3 {
+  z-index: 1;
+  animation-duration: 6s;
+  animation-name: card-3;
+  animation-iteration-count: infinite;
+}
+
+@keyframes card-1 {
+  0% {
   }
-  
-  .card {
-    height: 95px;
-    width: 95px;
-    /* border: 3px solid #262722; */
-    border-radius: 1rem;
-    /* background: url(images/box-test.png); */
-    background-color: white;
-    box-shadow: 0px 3px 6px rgba(0,0,0,.16);
+  16.66666% {
+    transform: translateX(95px) rotate(15deg);
+  } 
+  33.33333% {
+    transform: translateX(-20px);
+    z-index: 1;
+  } 
+  49.99999% {
+    transform: translateX(-20px);
+    z-index: 1;
+  }
+  66.66666% {
+    transform: translateX(-10px);
+    z-index: 2;
+  } 
+  83.33333% {
+    transform: translateX(-10px);
+    z-index: 2;
+  }
+}
+
+@keyframes card-2 {
+  0% {
+  }
+  16.66666% {
+    transform: translateX(0);
+  }
+  33.33333% {
+    transform: translateX(10px);
+    z-index: 3;
+  } 
+  49.99999% {
+    transform: translateX(105px) rotate(15deg);
+  } 
+  66.66666% {
+    transform: translateX(-10px);
+    z-index: 1;
+  } 
+  83.33333% {
+    transform: translateX(-10px);
+    z-index: 1;
+  } 
+}
+
+@keyframes card-3 {
+  0% {
+    z-index: 1;
+  } 
+  16.66666% {
+    transform: translateX(0);
+  }
+  33.33333% {
+    transform: translateX(10px);
+    z-index: 2;
+  } 
+  49.99999% {
+    transform: translateX(10px);
+    z-index: 2;
+  } 
+  66.66666% {
+    transform: translateX(20px);
+    z-index: 3;
+  } 
+  83.33333% {
+    transform: translateX(115px) rotate(15deg);
+  } 
+}
+
+#picking {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 6.3rem;
+}
+
+#result-div {
+  background: rgb(78,230,203);
+  background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%);
+    height: 100vh;
+    width: 100vw;
+    z-index: 40;
     position: absolute;
-    top: 0;
-    transition: transform 0.2s ease;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
-   }
-  
-    span {
-      background-color: #8badc8;
-      display: none;
-      margin: 0 auto;
-      width: 88px;
-      height: 88px;
-      border-radius: 25px;
-    }
-  
-    .card-1 {
-      z-index: 3;
-      margin-left: 20px;
-      animation-duration: 6s;
-      animation-name: card-1;
-      animation-iteration-count: infinite;
-    }
-    .card-2 {
-      z-index: 2;
-      margin-left: 10px;
-      animation-duration: 6s;
-      animation-name: card-2;
-      animation-iteration-count: infinite;
-    }
-    .card-3 {
-      z-index: 1;
-      animation-duration: 6s;
-      animation-name: card-3;
-      animation-iteration-count: infinite;
-    }
+    visibility: hidden;
+}
 
-  
-  @keyframes card-1 {
-    0% {
-    }
-    16.66666% {
-      transform: translateX(95px) rotate(15deg);
-    } 
-    33.33333% {
-      transform: translateX(-20px);
-      z-index: 1;
-    } 
-    49.99999% {
-      transform: translateX(-20px);
-      z-index: 1;
-    }
-    66.66666% {
-      transform: translateX(-10px);
-      z-index: 2;
-    } 
-    83.33333% {
-      transform: translateX(-10px);
-      z-index: 2;
-    }
-  }
-  
-  @keyframes card-2 {
-    0% {
-    }
-    16.66666% {
-      transform: translateX(0);
-    }
-    33.33333% {
-      transform: translateX(10px);
-      z-index: 3;
-    } 
-    49.99999% {
-      transform: translateX(105px) rotate(15deg);
-    } 
-    66.66666% {
-      transform: translateX(-10px);
-      z-index: 1;
-    } 
-    83.33333% {
-      transform: translateX(-10px);
-      z-index: 1;
-    } 
-  }
-  
-  @keyframes card-3 {
-    0% {
-      z-index: 1;
-    } 
-    16.66666% {
-      transform: translateX(0);
-    }
-    33.33333% {
-      transform: translateX(10px);
-      z-index: 2;
-    } 
-    49.99999% {
-      transform: translateX(10px);
-      z-index: 2;
-    } 
-    66.66666% {
-      transform: translateX(20px);
-      z-index: 3;
-    } 
-    83.33333% {
-      transform: translateX(115px) rotate(15deg);
-    } 
-  }
+#big-box-test {
+  width: 225px;
+  height: 225px;
+  margin: 9rem auto 0;
+  background-color: white;
+  box-shadow: 0px 3px 6px rgba(0,0,0,.16);
+  border-radius: 1rem;
+}
 
-  #picking {
-    position: absolute;
-    bottom: 1.5rem;
-    left: 6.3rem;
-  }
+.button {
+  width: 249px;
+  height: 50px;
+  text-decoration: none;
+  border: none;
+  margin: 1rem auto 0;
+  display: block;
+}
 
-  #result-div {
-    background: rgb(78,230,203);
-    background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%);
-      height: 100vh;
-      width: 100vw;
-      z-index: 40;
-      position: absolute;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      /* visibility: hidden; */
-  }
+#nearby {
+  background: url(../images/findNearby-btn.png);
+}
 
-  #big-box-test {
-    width: 225px;
-    height: 225px;
-    margin: 9rem auto 0;
-    background-color: white;
-    box-shadow: 0px 3px 6px rgba(0,0,0,.16);
-    border-radius: 1rem;
-  }
-
-  .button {
-    width: 249px;
-    height: 50px;
-    text-decoration: none;
-    border: none;
-    margin: 1rem auto 0;
-    display: block;
-  }
-
-  #nearby {
-    background: url(../images/findNearby-btn.png);
-  }
-
-  #pick-again {
-    background: url(../images/pickAgain-btn.png);
-  }
+#pick-again {
+  background: url(../images/pickAgain-btn.png);
+}
