--- a/final/css/main.css
+++ b/final/css/main.css
@@ -25,6 +25,10 @@
 
 }
 
+.hidden {
+  visibility: hidden !important;
+}
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -34,6 +38,7 @@ body {
   background: #4ee6cb;
   background: linear-gradient(152deg, #4ee6cb 0%, #1cb4df 100%);
   background-repeat: no-repeat;
+  color: #1a1a1a;
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
@@ -85,7 +90,6 @@ header {
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: 1px;
-  color: #1a1a1a;
   text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
 }
 input[type="radio"].toggle {
@@ -130,6 +134,12 @@ input[type="radio"].toggle:checked + label {
 }
 input[type="radio"].toggle:checked + label:after {
   left: 0;
+}
+
+#cuisine {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #cuisine-select {
@@ -182,14 +192,34 @@ input[type="radio"].toggle:checked + label:after {
   box-shadow: 0 0.1875rem 0.5rem rgba(0,0,0,.6);
 }
 
+[type=submit] {
+  background: none;
+  border: none;
+
+  background-color: #fff;
+  border-radius: 1.5rem;
+  font-size: 1.5rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
+  width: 14rem;
+  height: 3rem;
+  box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,.16);
+}
+
+[type=submit]:focus, [type=submit]:active {
+  box-shadow: 0 0.1875rem 0.5rem rgba(0,0,0,.6);
+}
+
 #shuffling-animation-div {
-  background: rgb(78,230,203);
-  background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%);
+  /* background: rgb(78,230,203);
+  background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%); */
   height: 100vh;
   width: 100vw;
   z-index: 30;
   position: absolute;
-  visibility: collapse;
+  /* visibility: collapse; */
 }
 
 #shuffling-animation-container {
@@ -327,12 +357,19 @@ input[type="radio"].toggle:checked + label:after {
 #picking {
   position: absolute;
   bottom: 1.5rem;
-  left: 6.3rem;
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 1px;
+  color: #fff;
+  text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
 }
 
 #result-div {
-  background: rgb(78,230,203);
-  background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%);
+  /* background: rgb(78,230,203);
+  background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%); */
     height: 100vh;
     width: 100vw;
     z-index: 40;
@@ -340,31 +377,77 @@ input[type="radio"].toggle:checked + label:after {
     display: flex;
     flex-direction: column;
     align-items: center;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
-#big-box-test {
-  width: 225px;
-  height: 225px;
+#result-icon {
+  width: 176px;
+  height: 176px;
   margin: 9rem auto 0;
-  background-color: white;
   box-shadow: 0px 3px 6px rgba(0,0,0,.16);
-  border-radius: 1rem;
+  border-radius: 2rem;
+  position: relative;
+}
+
+.result-label {
+  position: absolute;
+  bottom: -1.65rem;
+  text-align: center;
+  width: 100%;
+  font-size: 1.75rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
 }
 
 .button {
-  width: 249px;
-  height: 50px;
-  text-decoration: none;
+  background: none;
   border: none;
+
+  width: 15.625rem;
+  height: 3.125rem;
+  background-color: #fff;
+  border-radius: 1.5625rem;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 800;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
   margin: 1rem auto 0;
   display: block;
+  box-shadow: 0px 3px 6px rgba(0,0,0,.16);
+}
+
+.button p {
+  margin: 0;
 }
 
 #nearby {
-  background: url(../images/findNearby-btn.png);
+  margin-top: 3rem;
 }
 
-#pick-again {
-  background: url(../images/pickAgain-btn.png);
+@media screen and (orientation: portrait) {
+  #landscape {
+    display: none;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  #landscape {
+    display: block;
+    width: 26rem;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+    letter-spacing: 2px;
+    font-weight: 800;
+    text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
+    text-transform: uppercase;
+  }
+
+  #selection-div, #shuffling-animation-div, #result-div {
+    display: none;
+  }
 }
