:sparkles: result screen now shows picked cuisine
Added functionality of result screen
Removed result alert

--- a/final/css/main.css
+++ b/final/css/main.css
@@ -428,7 +428,7 @@ input[type="radio"].toggle:checked + label:after {
   position: relative;
 }
 
-.result-label {
+#result-label {
   position: absolute;
   bottom: -1.65rem;
   text-align: center;
