--- a/final/css/main.css
+++ b/final/css/main.css
@@ -90,27 +90,6 @@ header p {
   margin: 0;
 }
 
-/* #like-dislike-section {
-  border-radius: 1.5rem;
-  position: relative;
-  height: 3rem;
-  width: 17rem;
-  overflow: hidden;
-  margin: .75rem 0;
-} */
-/* 
-
-#slide-bg {
-  height: 100%;
-  width: 100%;
-  background-color: #fff;
-  content: "";
-  display: block;
-  position: absolute;
-  z-index: -10;
-  opacity: .6;
-} */
-
 .btn {
   display: inline-block;
   position: relative;
@@ -121,59 +100,6 @@ header p {
   letter-spacing: 1px;
   text-shadow: 0 .1875rem .375rem rgba(0,0,0,0.16);
 }
-
-/* input[type="radio"].toggle {
-  display: none;
-}
-
-input[type="radio"].toggle + label {
-  cursor: pointer;
-  min-width: 50%;
-  font-size: 1.5rem;
-  padding: .55rem 0;
-}
-
-input[type="radio"].toggle + label:hover {
-  background: none;
-  color: #1cb4df;
-}
-
-input[type="radio"].toggle + label:after {
-  background: #fff;
-  content: "";
-  height: 100%;
-  position: absolute;
-  top: 0;
-  transition: left 200ms cubic-bezier(0.77, 0, 0.175, 1);
-  width: 100%;
-  z-index: -1;
-  border-radius: 1.5rem;
-}
-
-input[type="radio"].toggle.toggle-left + label {
-  border-right: 0;
-}
-
-input[type="radio"].toggle.toggle-left + label:after {
-  left: 100%;
-}
-
-input[type="radio"].toggle.toggle-right + label {
-  margin-left: -5px;
-}
-
-input[type="radio"].toggle.toggle-right + label:after {
-  left: -100%;
-}
-
-input[type="radio"].toggle:checked + label {
-  cursor: default;
-  transition: color 200ms;
-}
-
-input[type="radio"].toggle:checked + label:after {
-  left: 0;
-} */
 
 #cuisine {
   display: flex;
@@ -251,14 +177,40 @@ input[type="radio"].toggle:checked + label:after {
   box-shadow: 0 0.1875rem 0.5rem rgba(0,0,0,.6);
 }
 
+/** Alert Div */
+#alert {
+  position: absolute;
+  z-index: 100;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(0,0,0, .2);
+  justify-content: center;
+}
+
+#alert > p {
+  background: #fff;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,.16);
+}
+
+#alert-close {
+  width: 1.5rem;
+  height: 1.5rem;
+  background: red;
+  position: absolute;
+  right: 0;
+ }
+ 
+
 #shuffling-animation-div {
-  /* background: rgb(78,230,203);
-  background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%); */
   height: 100vh;
   width: 100vw;
   z-index: 30;
   position: absolute;
-  /* visibility: collapse; */
 }
 
 #shuffling-animation-container {
@@ -290,15 +242,6 @@ input[type="radio"].toggle:checked + label:after {
 
 
 /** Deals with card animation */
-/* span {
-  background-color: #8badc8;
-  display: none;
-  margin: 0 auto;
-  width: 88px;
-  height: 88px;
-  border-radius: 25px;
-} */
-
 .card-1 {
   z-index: 3;
   margin-left: 20px;
@@ -407,8 +350,6 @@ input[type="radio"].toggle:checked + label:after {
 }
 
 #result-div {
-  /* background: rgb(78,230,203);
-  background: linear-gradient(152deg, rgba(78,230,203,1) 0%, rgba(28,180,223,1) 100%); */
     height: 100vh;
     width: 100vw;
     z-index: 40;
@@ -416,7 +357,6 @@ input[type="radio"].toggle:checked + label:after {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* visibility: hidden; */
 }
 
 #result-icon {
