--- a/final/css/main.css
+++ b/final/css/main.css
@@ -190,21 +190,52 @@ header p {
   justify-content: center;
 }
 
-#alert > p {
+#alert > span {
+  width: 16.5rem;
+  position: relative;
+}
+
+#alert p {
   background: #fff;
   padding: 1.5rem;
   border-radius: 1rem;
   box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,.16);
+  text-align: center;
+  margin: 0;
 }
 
 #alert-close {
-  width: 1.5rem;
-  height: 1.5rem;
-  background: red;
+  width: 1.75rem;
+  height: 1.75rem;
+  background: #d83535;
   position: absolute;
-  right: 0;
- }
- 
+  right: -0.75rem;
+  top: -0.75rem;
+  border-radius: 50%;
+  box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,.16);
+}
+
+span.close {
+  content: "";
+  width: 1rem;
+  height: .35rem;
+  background-color: #fff;
+  display: block;
+  position: absolute;
+  transform-origin: 50% 50%;
+  left: .375rem;
+  top: .7rem;
+  margin: 0;
+  border-radius: 0.175rem;
+}
+
+span.close:first-of-type {
+  transform: rotate(45deg);
+}
+
+span.close:nth-of-type(2) {
+  transform: rotate(-45deg);
+}
 
 #shuffling-animation-div {
   height: 100vh;
